# ncurses-snake

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  TODO  main.cpp
intlibs/: CMakeLists.txt  gdef.hpp  gflow.cpp  gflow.hpp  ghandle.cpp  ghandle.hpp  ginit.cpp  ginit.hpp  gobjs.cpp  gobjs.hpp  gutils.cpp  gutils.hpp
